Fix weird Storage overflow issue

--- a/app/src/styles/views/Storage.less
+++ b/app/src/styles/views/Storage.less
@@ -14,7 +14,6 @@
 .volume {
   // Based on TWBS .panel
   margin     : 25px;
-  overflow   : hidden;
   .box-shadow( 0 2px 16px -2px rgba(0, 0, 0, 0.15) );
   .transition( all 0.25S );
 
